solr/core/src/java/org/apache/solr/aqp/QueryParser.java
/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/* Generated By:JavaCC: Do not edit this line. QueryParser.java */
package org.apache.solr.aqp;

// Note this list of imports gets propagated to several generated classes!
import java.io.StringReader;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.HashSet;
import java.util.List;
import java.util.Set;
import org.apache.lucene.analysis.Analyzer;
import org.apache.lucene.queryparser.charstream.CharStream;
import org.apache.lucene.queryparser.charstream.FastCharStream;
import org.apache.lucene.search.BooleanClause;
import org.apache.lucene.search.Query;
import org.apache.lucene.search.BooleanQuery;
import org.apache.solr.parser.Operator;
import org.apache.solr.parser.SynonymQueryStyle;
import org.apache.solr.search.SyntaxError;
import org.apache.solr.search.QParser;

@SuppressWarnings("ALL") // generated class!
public class QueryParser extends AdvancedQueryParserBase implements QueryParserConstants {


  //TODO: figure out what we want to do about split on whitespace...
  /** default split on whitespace behavior */
  public static final boolean DEFAULT_SPLIT_ON_WHITESPACE = false;

   public QueryParser(String defaultField, QParser parser) {
    this(new FastCharStream(new StringReader("")));
    init(defaultField, parser);
  }

  /**
   * @see #setSplitOnWhitespace(boolean)
   */
  public boolean getSplitOnWhitespace() {
    return splitOnWhitespace;
  }

  /**
   * Whether query text should be split on whitespace prior to analysis.
   * Default is <code>{@value #DEFAULT_SPLIT_ON_WHITESPACE}</code>.
   */
  public void setSplitOnWhitespace(boolean splitOnWhitespace) {
    this.splitOnWhitespace = splitOnWhitespace;
  }

  private boolean splitOnWhitespace = DEFAULT_SPLIT_ON_WHITESPACE;
  private static Set<Integer> disallowedPostMultiTerm
    = new HashSet<Integer>(Arrays.asList(COLON, STAR, AND, OR));
  private static boolean allowedPostMultiTerm(int tokenKind) {
    return disallowedPostMultiTerm.contains(tokenKind) == false;
  }

  @Override
  protected Query newFieldQuery(Analyzer analyzer, String field, String queryText,
                                boolean quoted, boolean fieldAutoGenPhraseQueries, boolean fieldEnableGraphQueries,
                                SynonymQueryStyle synonymQueryStyle)
      throws SyntaxError {
    setAutoGenerateMultiTermSynonymsPhraseQuery(fieldAutoGenPhraseQueries || getAutoGeneratePhraseQueries());
    // Don't auto-quote graph-aware field queries
    boolean treatAsQuoted = getSplitOnWhitespace()
        ? (quoted || fieldAutoGenPhraseQueries || getAutoGeneratePhraseQueries()) : quoted;
    return super.newFieldQuery(analyzer, field, queryText, treatAsQuoted, false, fieldEnableGraphQueries, synonymQueryStyle);
  }

  void eatRp()  throws ParseException, SyntaxError  {
    EatRP();
  }

  protected static int getOpDistance(String distanceOp) {
    /* W, W/2, W/3 etc -> 1, 2 3, etc. Same for N... */
    return distanceOp.length() == 1
      ? 0
      : Integer.parseInt( distanceOp.substring( 2 , distanceOp.length() - 1 )) - 1;
  }

// This makes sure that there is no garbage after the query string
  final public Query TopLevelQuery(String field) throws ParseException, SyntaxError {
  Query q;
    q = Query(field, null, MOD_NONE);
    jj_consume_token(0);
    {if (true) return q;}
    throw new Error("Missing return statement in function");
  }

  final public int ModifierOpt(int ret) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
    case MUST:
    case SHOULD:
      ret = Modifier();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

//noinspection BnfStringCanNeverBeMatched
  final public int Modifier() throws ParseException {
  int ret = MOD_NONE;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MUST:
      jj_consume_token(MUST);
                ret = MOD_MUST;
      break;
    case NOT:
      jj_consume_token(NOT);
               ret = MOD_NOT;
      break;
    case SHOULD:
      jj_consume_token(SHOULD);
                  ret = MOD_SHOULD;
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Query Query(String field, SpanContext sc, int mods) throws ParseException, SyntaxError {
  @SuppressWarnings("Convert2Diamond") // javacc doesn't like diamonds
  List<BooleanClause> clauses = new ArrayList<BooleanClause>();
  Query q;
  int conj;
    if (jj_2_1(2)) {
      MultiTerm(field, clauses, sc);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
      case MUST:
      case SHOULD:
      case W:
      case N:
      case BAREOPER:
      case LPAREN:
      case STAR:
      case QUOTED:
      case SINGLE_QUOTED:
      case TERM:
      case PREFIXTERM:
      case WILDTERM:
      case REGEXPTERM:
      case RANGEIN_START:
      case RANGEEX_START:
        mods = ModifierOpt(mods);
        q = Clause(field, mods == MOD_NOT ? MOD_NONE : mods);
        addClause(clauses,  mods, q); mods=MOD_NONE;
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
      case MUST:
      case SHOULD:
      case W:
      case N:
      case BAREOPER:
      case LPAREN:
      case STAR:
      case QUOTED:
      case SINGLE_QUOTED:
      case TERM:
      case PREFIXTERM:
      case WILDTERM:
      case REGEXPTERM:
      case RANGEIN_START:
      case RANGEEX_START:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      if (jj_2_2(2)) {
        MultiTerm(field, clauses, sc);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
        case MUST:
        case SHOULD:
        case W:
        case N:
        case BAREOPER:
        case LPAREN:
        case STAR:
        case QUOTED:
        case SINGLE_QUOTED:
        case TERM:
        case PREFIXTERM:
        case WILDTERM:
        case REGEXPTERM:
        case RANGEIN_START:
        case RANGEEX_START:
          mods = ModifierOpt(mods);
          q = Clause(field, mods == MOD_NOT ? MOD_NONE : mods);
        addClause(clauses,  mods, q);  mods=MOD_NONE;
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  if (clauses.size() == 1 && clauses.get(0).getOccur() != BooleanClause.Occur.MUST_NOT ) {
    Query firstQuery = clauses.get(0).getQuery();
    if ( !(firstQuery instanceof RawQuery) || ((RawQuery)firstQuery).getTermCount() == 1) {
      Query normQ = rawToNormal(firstQuery);
      if (sc == null) {
        {if (true) return normQ;}
      } else {
        {if (true) return convertToSpans(sc, normQ, this.operator);}
      }
    }
  }
  @SuppressWarnings("Convert2Diamond") // javacc doesn't like diamonds
  List<BooleanClause> singleDefaults = new ArrayList<BooleanClause>();
    for (BooleanClause clause : clauses) {
      Query query = clause.getQuery();
      if (query instanceof BooleanQuery) {
        BooleanQuery bool = (BooleanQuery) query;
        List<BooleanClause> subClauses = bool.clauses();
        BooleanClause.Occur op = (operator == AND_OPERATOR ? BooleanClause.Occur.MUST : BooleanClause.Occur.SHOULD);
        if (subClauses.size() == 1 && clause.getOccur() == op) {
          singleDefaults.add(clause);
        }
      }
    }
    // promote single shoulds to avoid (-foo) not being equivalent to -(foo)
    for (BooleanClause singleDefault : singleDefaults) {
      clauses.remove(singleDefault);
      BooleanClause promote = ((BooleanQuery)singleDefault.getQuery()).clauses().get(0);
      clauses.add(new BooleanClause(promote.getQuery(), promote.getOccur()));
    }
    Query booleanQuery = getBooleanQuery(clauses);
    if (sc == null) {
      {if (true) return booleanQuery;}
    } else {
      // span query cases
      {if (true) return booleanQuery == null ? null : convertToSpans(sc, booleanQuery, this.operator);}
    }
    throw new Error("Missing return statement in function");
  }

//noinspection BnfStringCanNeverBeMatched
  final public Query Clause(String field, int mods) throws ParseException, SyntaxError {
  Query q;
  Token fieldToken;
  Token star;
  int flags = 0;
  Token prox;
  SpanContext sc;
  Operator origOperator = operator;
    if (jj_2_3(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TERM:
        fieldToken = jj_consume_token(TERM);
        jj_consume_token(COLON);
                                  assertNotInsideSpan(fieldToken); field = discardEscapeChar(fieldToken.image);
        break;
      case STAR:
        star = jj_consume_token(STAR);
        jj_consume_token(COLON);
                                 assertNotInsideSpan(star); field = "*";
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BAREOPER:
    case STAR:
    case QUOTED:
    case SINGLE_QUOTED:
    case TERM:
    case PREFIXTERM:
    case WILDTERM:
    case REGEXPTERM:
    case RANGEIN_START:
    case RANGEEX_START:
      q = Term(field);
      break;
    case W:
      prox = jj_consume_token(W);
              this.operator = Operator.AND; sc = new SpanContext(); sc.type=W; sc.distOpNum=getOpDistance(prox.image);
      q = Query(field, sc, mods);
      CloseParen(origOperator);
      break;
    case N:
      prox = jj_consume_token(N);
              this.operator = Operator.AND; sc = new SpanContext(); sc.type=N; sc.distOpNum=getOpDistance(prox.image);
      q = Query(field, sc, mods);
      CloseParen(origOperator);
      break;
    case NOT:
    case MUST:
    case SHOULD:
      mods = Modifier();
      q = Query(field, null, mods);
      break;
    case LPAREN:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
      case MUST:
      case SHOULD:
        mods = Modifier();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      OpenParen(mods);
      q = Query(field, null, mods);
      CloseParen(origOperator);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return q;}
    throw new Error("Missing return statement in function");
  }

//noinspection BnfStringCanNeverBeMatched
  final public void OpenParen(int modifier) throws ParseException {
  if (modifier == MOD_MUST) {
    this.operator = Operator.AND;
  }
  if (modifier == MOD_SHOULD) {
    this.operator = Operator.OR;
  }
    jj_consume_token(LPAREN);
  }

//noinspection BnfStringCanNeverBeMatched
  final public void CloseParen(Operator original) throws ParseException {
  this.operator = original;
    jj_consume_token(RPAREN);
  }

//noinspection BnfStringCanNeverBeMatched
  final public Query Term(String field) throws ParseException, SyntaxError {
  Token term = null, goop1, goop2;
  AdvToken atk;
  boolean prefix = false;
  boolean wildcard = false;
  boolean regexp = false;
  boolean startInc=false;
  boolean endInc=false;
  Query q;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BAREOPER:
    case STAR:
    case TERM:
    case PREFIXTERM:
    case WILDTERM:
    case REGEXPTERM:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TERM:
        term = jj_consume_token(TERM);
        break;
      case STAR:
        term = jj_consume_token(STAR);
                      wildcard=true;
        break;
      case PREFIXTERM:
        term = jj_consume_token(PREFIXTERM);
                            prefix=true;
        break;
      case WILDTERM:
        term = jj_consume_token(WILDTERM);
                          wildcard=true;
        break;
      case REGEXPTERM:
        term = jj_consume_token(REGEXPTERM);
                            regexp=true;
        break;
      case BAREOPER:
        term = jj_consume_token(BAREOPER);
                          term.image = term.image.substring(0,1);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      assert term != null;
      atk = (AdvToken) term;
      q = handleBareTokenQuery(getField(field), term,  prefix, wildcard, regexp, this, atk.pDepth);
      break;
    case RANGEIN_START:
    case RANGEEX_START:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RANGEIN_START:
        jj_consume_token(RANGEIN_START);
                        startInc = true;
        break;
      case RANGEEX_START:
        jj_consume_token(RANGEEX_START);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RANGE_GOOP:
        goop1 = jj_consume_token(RANGE_GOOP);
        break;
      case RANGE_QUOTED:
        goop1 = jj_consume_token(RANGE_QUOTED);
        break;
      case RANGE_TO:
        goop1 = jj_consume_token(RANGE_TO);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RANGE_TO);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RANGE_GOOP:
        goop2 = jj_consume_token(RANGE_GOOP);
        break;
      case RANGE_QUOTED:
        goop2 = jj_consume_token(RANGE_QUOTED);
        break;
      case RANGE_TO:
        goop2 = jj_consume_token(RANGE_TO);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RANGEIN_END:
        jj_consume_token(RANGEIN_END);
                      endInc = true;
        break;
      case RANGEEX_END:
        jj_consume_token(RANGEEX_END);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      assertNotInsideSpan(term);
      boolean startOpen=false;
      boolean endOpen=false;
      if (goop1.kind == RANGE_QUOTED) {
        goop1.image = goop1.image.substring(1, goop1.image.length()-1);
      } else if ("*".equals(goop1.image)) {
        startOpen=true;
      }
      if (goop2.kind == RANGE_QUOTED) {
        goop2.image = goop2.image.substring(1, goop2.image.length()-1);
      } else if ("*".equals(goop2.image)) {
        endOpen=true;
      }
      q = getRangeQuery(getField(field),
                        startOpen ? null : discardEscapeChar(goop1.image),
                        endOpen ? null : discardEscapeChar(goop2.image), startInc, endInc);
      break;
